testing background image fix on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,13 +29,12 @@ body {
   padding: 0;
 }
 
-/*@media screen and (max-width:680px) {
+@media screen and (max-width:680px) {
   body {
-    background-size: auto;
-
+    background-size: cover;
   }
 }
-*/
+
 /*******************NAVBAR STYLES*******************/
 
 .topnav {
